--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -26,6 +26,9 @@
 .logo--mobile {
   display: block;
   text-align: center;
+  @media screen and (min-width: 1200px) {
+    text-align: start;
+  }
 }
 
 .logo__subtext {
