--- a/sass/components/portfolio/_portfolio.scss
+++ b/sass/components/portfolio/_portfolio.scss
@@ -5,11 +5,16 @@
   background-color: $white-text;
 }
 
+.portfolio {
+  padding: 60px 0px;
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0px;
+  }
+}
+
 .portfolio__list {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 60px;
-  padding-left: 15px;
   margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
@@ -18,7 +23,6 @@
   }
 
   @media screen and (min-width: 1200px) {
-    padding-top: 94px;
     margin-bottom: 50px;
   }
 }
@@ -58,8 +62,8 @@
 }
 
 .product__list {
-  padding-bottom: 94px;
   margin-right: -30px;
+  margin-bottom: -30px;
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -68,8 +72,6 @@
 }
 
 .product__item {
-  border: 1px solid #eeeeee;
-
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -90,6 +92,11 @@
 .product__thumb {
   position: relative;
   overflow: hidden;
+
+  img {
+    height: 294px;
+    object-fit: cover;
+  }
 }
 
 .product__card:hover .product__overlay {
@@ -115,11 +122,21 @@
   line-height: 1.55;
   letter-spacing: 0.03em;
   color: $white-text;
-  padding: 63px 24px;
+
+  padding: 77px 24px;
+
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
 }
 
 .product__content {
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
 }
 
 .product__title {
