--- a/sass/components/common/_footer.scss
+++ b/sass/components/common/_footer.scss
@@ -27,6 +27,9 @@
 .contacts {
   display: flex;
   flex-direction: column;
+  @media screen and (min-width: 1200px) {
+    align-items: flex-start;
+  }
 }
 
 .contacts__item {
